--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="ml-auto">
       
-      <button class="btn btn-danger" >Log out</button>
+      <button class="btn btn-danger"  (click)="logout()">Log out</button>
     </div>
   </div>
 </nav>
