--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row vh-100 justify-content-center align-items-center">
       <div class="col-md-6">
         <div class="card">
           <div class="card-header">Register</div>
