--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,10 +2,10 @@
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" [routerLink]="['add_item']" aria-current="page" href="#">add item</a>
-        <a class="nav-link active" [routerLink]="['add_category']" aria-current="page" href="#">add category</a>
-        <a class="nav-link active" [routerLink]="['items']" aria-current="page" href="#">items</a>
-        <a class="nav-link active" [routerLink]="['categories']"  aria-current="page" href="#">categories</a>
+        <a class="nav-link active" [routerLink]="['/add_item']" aria-current="page" href="#">add item</a>
+        <a class="nav-link active" [routerLink]="['/add_category']" aria-current="page" href="#">add category</a>
+        <a class="nav-link active" [routerLink]="['/items']" aria-current="page" href="#">items</a>
+        <a class="nav-link active" [routerLink]="['/categories']"  aria-current="page" href="#">categories</a>
       </div>
     </div>
     <div class="ml-auto">
