--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -16,6 +16,7 @@
               </div>
               <button type="submit" class="btn btn-primary">Register</button>
             </form>
+            <div *ngIf="message" class="text-danger">{{ message }}</div>
           </div>
         </div>
       </div>
